--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:             Orcinus Games
+title:             Egypt: Shattered Order from Orcinus Games
 email:             dev@orsondewitt.com
 description:       Interactive novel with factual Ancient Egyptian history at its core
-author:            Orson De Witt
+author:            Orcinus Games, 
 #url:               "localhost:4000"
 url:               "http://orsondewitt.github.io/"
 baseurl:
