--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:             Egypt: Shattered Order from Orcinus Games
+title:             Egypt Shattered Order from Orcinus Games
 email:             dev@orsondewitt.com
 description:       Interactive novel with factual Ancient Egyptian history at its core
 author:            Orcinus Games, 
