--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl:
 # Social Profiles
 #twitter_username:  SBootstrap
 #github_username:   BlackrockDigital
-#facebook_username: StartBootstrap
+#subreddit: OrcinusGames
 
 # Build settings
 markdown:          kramdown
