--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:             Egypt Shattered Order - Interactive novel with factual history at its core | Orcinus Games
+title:             Egypt Shattered Order | Narrative adventure with factual history at its core | Orcinus Games
 email:             dev@orsondewitt.com
-description:       Interactive novel with factual Ancient Egyptian history at its core
+description:       Narrative adventure with factual Ancient Egyptian history at its core
 author:            Orcinus Games
 #url:               "localhost:4000"
 url:               "http://orsondewitt.github.io/"
