--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ baseurl:
 #github_username:   BlackrockDigital
 subreddit: OrcinusGames
 discord_invite: https://discord.gg/amMNE4x
+steam_creator_page: https://store.steampowered.com/developer/orcinusgames/
+youtube: https://www.youtube.com/channel/UCdod8Lkks-QqSjm0epIHv-A
 
 # Build settings
 markdown:          kramdown
