--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ subreddit: OrcinusGames
 discord_invite: https://discord.gg/amMNE4x
 steam_creator_page: https://store.steampowered.com/developer/orcinusgames/
 youtube: https://www.youtube.com/channel/UCdod8Lkks-QqSjm0epIHv-A
-e-mail: dev@orsondewitt.com
+email: dev@orsondewitt.com
 
 # Build settings
 markdown:          kramdown
