--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:             Egypt Shattered Order | Narrative adventure with factual history at its core | Orcinus Games
+title:             Egypt Shattered Order | Narrative adventure with factual history at its core
 email:             dev@orsondewitt.com
 description:       Narrative adventure with factual Ancient Egyptian history at its core
 author:            Orcinus Games
