--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:             Egypt Shattered Order | Narrative adventure with factual history at its core
+title:             Egypt Shattered Order
 email:             dev@orsondewitt.com
-description:       Egypt: Shattered Order is a branching narrative adventure and strategy game based on the history of Ancient Egypt. For PC and Mac.
+description:       Egypt: Shattered Order is a branching narrative adventure and strategy game with factual history at its core. For PC and Mac.
 author:            Orcinus Games
 #url:               "localhost:4000"
 url:               "http://orsondewitt.github.io"
