--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:             Egypt Shattered Order - a narrative adventure
+title:             a narrative adventure
 email:             dev@orsondewitt.com
 description:       is a branching narrative adventure and strategy game with factual history at its core. For PC and Mac.
 author:            Orcinus Games
