--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:             dev@orsondewitt.com
 description:       is a branching narrative adventure and strategy game with factual history at its core. For PC and Mac.
 author:            Orcinus Games
 #url:               "localhost:4000"
-url:               "http://orsondewitt.github.io"
+url:               "https://egypt.orcinusgames.com"
 baseurl:
 
 # Social Profiles
